# Catime

./: .env.example  .gitignore  .gitleaks.toml  CMakeLists.txt  CODE_OF_CONDUCT.md  DESIGN_GUIDELINES.md  Makefile  PRIVACY.md  README-zh.md  README.md  README_EN.md  README_ENG.md  SECURITY.md  about.css  about.html  blog-post.html  blog.html  build.bat  build.sh  build_monitor.ps1  build_worker.bat  config.c  guide.html  index.html  main.c  mingw-w64-toolchain.cmake  package.json  pnpm-lock.yaml  resource.h  resource.rc  style.css  support.html  support.md  tray_menu.c  vite.config.js  window_reference.c  xmake.lua
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  1_feature_request.yml  2_bug_report.yml  2_feature_request.yml  bug_report.md  config.yml
.github/workflows/: build.yml  chocolatey.yml  release.yml  signpath-sign.yml  update-download-manifest.yml
assets/Contributors/: 双脚猫.avif  学习马楼.avif  小众软件.avif  我是无名吖.avif  星空下数羊.avif  李康.avif  洋仓鼠.avif  猫屋敷梨梨Official.avif  睡着的火山.avif
components/: footer.html  scroll-progress.html
downloads/: releases.json
font processing/: index.html  script.js
i18n/: README-en.md  README_de.md  README_es.md  README_fr.md  README_ja.md  README_ko-kr.md  README_ko.md  README_pt-br.md  README_pt.md  README_ru.md  README_zh-CN.md  README_zh-Hant.md  README_zh-hant.md  README_zh-tw.md  de.md  en.md  es.md  fr.md  it.md  ja.md  ko.md  prepare_embedded_languages.js  pt.md  ru.md  validate_languages.js  zh-Hant.md  zh_CN.md
include/: async_update_checker.h  audio_player.h  cli.h  color.h  color_parser.h  color_state.h  config.h  config_applier.h  config_defaults.h  config_loader.h  config_watcher.h  dialog_error.h  dialog_info.h  dialog_language.h  dialog_procedure.h  drag_scale.h  drawing.h  font.h  hotkey.h  language.h  language_def.h  log.h  markdown_parser.h  media.h  menu_preview.h  notification.h  plugin_ipc.h  pomodoro.h  preview_display.h  rightClickMenu.h  shortcut_checker.h  startup.h  startup_policy.h  startup_shortcut.h  system_monitor.h  text_effect.h  timer.h  timer_events.h  tray.h  tray_animation.h  (+14 more)
include/cache/: animation_cache.h  font_cache.h  resource_cache.h  resource_watcher.h
include/color/: color.h  color_dialog.h  color_feedback.h  color_input_dialog.h  color_parser.h  color_picker_dialog.h  color_state.h  gradient.h
include/config/: config_applier.h  config_defaults.h  config_loader.h  config_plugin_security.h  config_recovery.h  config_store.h  config_watcher.h  config_writer.h
include/dialog/: dialog_common.h  dialog_error.h  dialog_font_picker.h  dialog_form_layout.h  dialog_info.h  dialog_input.h  dialog_input_internal.h  dialog_input_options.h  dialog_language.h  dialog_markdown.h  dialog_message.h  dialog_modern.h  dialog_notification.h  dialog_notification_audio.h  dialog_plugin_security.h  dialog_pomodoro.h  dialog_procedure.h
include/drawing/: drawing_effect.h  drawing_image.h  drawing_markdown_stb.h  drawing_render.h  drawing_text_stb.h  drawing_time_format.h  drawing_timer_precision.h
include/font/: font_config.h  font_manager.h  font_path_manager.h  font_ttf_parser.h
include/log/: log_core.h  log_exception.h  log_system_info.h
include/main/: main_cli_routing.h  main_initialization.h  main_single_instance.h
include/markdown/: markdown_image.h  markdown_interactive.h  markdown_parser.h
include/monitor/: monitor_core.h  monitor_types.h
include/plugin/: plugin_data.h  plugin_exit.h  plugin_extensions.h  plugin_ipc.h  plugin_manager.h  plugin_process.h
include/timer/: main_timer.h  timer.h  timer_events.h  timer_render_cache.h
include/tray/: tray.h  tray_animation_core.h  tray_animation_decoder.h  tray_animation_loader.h  tray_animation_menu.h  tray_animation_percent.h  tray_animation_playback.h  tray_animation_speed_input.h  tray_animation_timer.h  tray_events.h  tray_hover_cache.h  (+6 more)
public/: _redirects  guide.html  index.html  style.css
resource/: about_dialog.rc  app.manifest  catime.rc  catime_version_numeric.h.in  color_dialog.rc  countdown_dialog.rc  credits_dialog.rc  custom_text_display_dialog.rc  download_progress_dialog.rc  embedded_assets.json  error_dialog.rc  font_license_dialog.rc  help_dialog.rc  hotkey_dialog.rc  input_dialog.rc  languages.rc  license_dialog.rc  monitor_dialog.rc  no_update_dialog.rc  notification_dialog.rc  plugin_security_dialog.rc  pomodoro_combo_dialog.rc  pomodoro_dialog.rc  pomodoro_loop_dialog.rc  pomodoro_time_dialog.rc  resource.h  resource.rc  shortcut_dialog.rc  startup_dialog.rc  support_dialog.rc  system_font_picker_dialog.rc  update_dialog.rc  update_exit_dialog.rc  website_dialog.rc
scripts/: README-navigation.md  about.js  components.js  config.js  galaxy.js  generate-download-manifest.js  guide.js  index.js  main.js  navigation.js  support.js  ui-utils.js
src/: async_update_checker.c  audio_player.c  cli.c  color.c  color_dialog.c  color_input_dialog.c  color_state.c  config.c  config_animation.c  config_applier.c  config_core.c  config_hotkey.c  config_loader.c  config_misc.c  config_notification.c  config_path.c  config_watcher.c  config_writer.c  dialog_input.c  dialog_language.c  dialog_procedure.c  drag_scale.c  drawing.c  font.c  hotkey.c  language.c  log.c  main.c  markdown_parser.c  media.c  menu_preview.c  notification.c  notification_delivery.c  notification_internal.h  notification_render.c  plugin_ipc.c  preview_display.c  rightClickMenu.c  runningPicture.c  shortcut_checker.c  (+22 more)
styles/: about.css  index.css  style.css  support.css
tests/: render_retry_tests.c  startup_policy_tests.c  startup_shortcut_tests.c  test_invariant_cli.c  test_invariant_stb_truetype.py  timer_render_cache_tests.c  tray_animation_playback_tests.c  tray_animation_speed_input_tests.c  tray_animation_timer_tests.c  tray_hover_cache_tests.c  tray_icon_lifetime_tests.c  window_placement_tests.c
tools/: optimize_icon.js  optimize_png.js  position_audit.ps1  prepare_embedded_resources.js
tray-animations/: README.md  index.html  sections.json
wiki/: Home.md  右键托盘图标.md  如何编译.md  左键.托盘图标.md  左键托盘图标.md
(+252 files in other folders)
